Enhance ULID library for performance, correctness, clarity and usability. Fixed bug in the UlidFactory and related in Ulid. (#2)
* Initial copy from vm2

* Replaced the internal byte array with ReadOnlyMemory. Added tests for code coverage.

* Add static Ulid.NewUlid() that uses internal factory. Enhance ULID documentation, benchmarks, and generation methods

Updated README.md to clarify ULID vs UUID comparison and added performance benchmarks.
Modified UlidBenchmarks.cs to return ULID instances and introduced new benchmark classes for GUIDs.
Enhanced Ulid struct with a static `NewUlid()` method for simplified ULID generation.
Added tests in UlidTests.cs to ensure `NewUlid()` generates monotonically increasing ULIDs.

* Remove ToBase64

* In prep for GitHub Actions

* Add actions

* Fix ci.yaml

* Fix ci.yaml

* more fixes

* ++

* ++

* ++

* ci++

* ++

* ci++

* fix coverage

* do not push launchSettings to all developers!

* Resurect the UlidRandomProvider. work on CI

* Cleanup and CI

* cleanup

* add --exclude-by-attribute "GeneratedCodeAttribute"

* dotnet test /p:ExcludeByAttribute="GeneratedCodeAttribute"

* ++

* Add build and run on all platforms on pull requests too

* prerelease and realease workflows

* Fix the benchmarks

* Add CHANGELOG, release process, and MinVer integration

Introduced a `CHANGELOG.md` file to document all notable changes, adhering to the Keep a Changelog format and Semantic Versioning. Added an initial baseline release entry (`v0.1.0`) and guidance for maintaining the changelog.

Added a `ReleaseProcess.md` file to document versioning, prerelease automation, and stable publishing workflows. This includes details on MinVer usage, automated prerelease tagging, manual stable release steps, and troubleshooting.

Updated `Directory.Build.props` to simplify MinVer configuration. Updated `Directory.Packages.props` to reorganize and re-add central package version declarations, including updating `MinVer` to `6.0.0` and `BenchmarkDotNet`

--- a/src/UlidType/UlidType.csproj
+++ b/src/UlidType/UlidType.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <RootNamespace>vm2</RootNamespace>
@@ -6,20 +6,15 @@
 
   <PropertyGroup Label="NuGet">
     <Title>vm2.ULID</Title>
-    <Description>Implementation of the Universally Unique Lexicographically Sortable Identifier
-      (ULID) for .NET.</Description>
+    <Description>
+        Implementation of the Universally Unique Lexicographically Sortable Identifier (ULID) for .NET.
+    </Description>
+    <PackageId>vm2.ULID</PackageId>
     <PackageReleaseNotes>Initial version of the vm2.Ulid.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
     <PackageProjectUrl>https://github.com/vmelamed/vm2.Ulid/blob/main/src/UlidType/UlidType.csproj</PackageProjectUrl>
     <PackageTags>ULID Universally Unique Lexicographically Sortable Identifier .net core vm2</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Update="MinVer">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
 
 </Project>
