Work on CI/CD. Fix prerelease.yaml

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -67,6 +67,8 @@ jobs:
         env:
           TAG: ${{ steps.compute.outputs.prerelease_tag }}
         run: |
+            git config --global user.email "valo@vtmelamed.com"
+            git config --global user.name "Val Melamed"
             git tag -a "$TAG" -m "Automated prerelease $TAG"
             git push origin "$TAG"
 
