--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -67,8 +67,10 @@ jobs:
         env:
           TAG: ${{ steps.compute.outputs.prerelease_tag }}
         run: |
+            git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
-            git config --global user.name "GitHub Actions"
+            git remote set-url origin https://x-access-token:${{ secrets.GH_PAT_VM2_ULID }}@github.com/vmelamed/vm2.Ulid.git
+            git push origin HEAD:refs/heads/${GITHUB_REF}
             git tag -a "$TAG" -m "Automated prerelease $TAG"
             git push origin "$TAG"
 
