--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -74,8 +74,8 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global url."https://${{ secrets.GH_PAT }}@github.com/vmelamed/vm2.Ulid.git"
-          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/vmelamed/vm2.Ulid.git
+          git config --global url."https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}"
+          git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
           git push origin HEAD:refs/heads/${GITHUB_REF_NAME}
           git tag -a "$TAG" -m "Automated prerelease $PTAG"
           git push origin "$TAG"
