Enable manual triggering of prerelease workflow [no ci]
Add workflow_dispatch event with reason input to prerelease.yml

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -8,6 +8,10 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Why run?'      
 
 env:
   DOTNET_NOLOGO: true
