--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
     inputs:
       reason:
-        description: 'Why run?'      
+        description: 'Why run?'
 
 env:
   DOTNET_NOLOGO: true
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          filter: tree:0
+          fetch-tags: true
 
       - name: Skip if commit already tagged (any v* tag)
         id: tagcheck
