--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -50,11 +50,13 @@ jobs:
           # Find latest stable (no hyphen) tag like v1.2.3
           if git describe --tags --match 'v[0-9]*.[0-9]*.[0-9]*' --abbrev=0 >/dev/null 2>&1; then
             LATEST_STABLE=$(git describe --tags --match 'v[0-9]*.[0-9]*.[0-9]*' --abbrev=0)
+            echo "Latest stable tag: ${LATEST_STABLE}"
             BASE=${LATEST_STABLE#v}
             MAJOR=${BASE%%.*}
             REST=${BASE#*.}
             MINOR=${REST%%.*}
             PATCH=${REST#*.}
+            echo "Parsed version: major=${MAJOR}, minor=${MINOR}, patch=${PATCH}"
             # increment patch for prerelease base
             NEXT_PATCH=$((PATCH + 1))
           else
