debugging prerelease.yml

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -49,14 +49,17 @@ jobs:
 
           # Find latest stable (no hyphen) tag like v1.2.3
           if git describe --tags --match 'v[0-9]*.[0-9]*.[0-9]*' --abbrev=0 >/dev/null 2>&1; then
-            LATEST_STABLE=$(git describe --tags --match 'v[0-9]*.[0-9]*.[0-9]*' --abbrev=0)
-            echo "Latest stable tag: ${LATEST_STABLE}"
+            LATEST_STABLE=$(git tag --list 'v[0-9].[0-9].[0-9]*' | grep -E '^v[0-9]+.[0-9]+.[0-9]+$' | sort -V | tail -n1 || true)
+            BASE=${LATEST_STABLE#v}
+            IFS='.' read -r MAJOR MINOR PATCH <<< "$BASE"
+            NEXT_PATCH=$((PATCH + 1))
+            echo "Latest stable tag: ${LATEST_STABLE}" >> $GITHUB_OUTPUT
             BASE=${LATEST_STABLE#v}
             MAJOR=${BASE%%.*}
             REST=${BASE#*.}
             MINOR=${REST%%.*}
             PATCH=${REST#*.}
-            echo "Parsed version: major=${MAJOR}, minor=${MINOR}, patch=${PATCH}"
+            echo "Parsed version: major=${MAJOR}, minor=${MINOR}, patch=${PATCH}" >> $GITHUB_OUTPUT
             # increment patch for prerelease base
             NEXT_PATCH=$((PATCH + 1))
           else
@@ -69,9 +72,7 @@ jobs:
           DATE=$(date -u +%Y%m%d)
           RUN=${GITHUB_RUN_NUMBER}
           PRERELEASE_TAG="v${MAJOR}.${MINOR}.${NEXT_PATCH}-preview.${DATE}.${RUN}"
-
           echo "prerelease_tag=${PRERELEASE_TAG}" >> $GITHUB_OUTPUT
-          echo "Computed prerelease tag: ${PRERELEASE_TAG}"
 
       - name: Create & push prerelease tag
         if: steps.tagcheck.outputs.already_tagged == 'false'
