debugging prerelease.yml+1 [no ci]

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -53,7 +53,7 @@ jobs:
             BASE=${LATEST_STABLE#v}
             IFS='.' read -r MAJOR MINOR PATCH <<< "$BASE"
             NEXT_PATCH=$((PATCH + 1))
-            echo "Latest stable tag: ${LATEST_STABLE}" >> $GITHUB_OUTPUT
+            echo "Latest stable tag: latest_stable_tag=${LATEST_STABLE}" >> $GITHUB_OUTPUT
             BASE=${LATEST_STABLE#v}
             MAJOR=${BASE%%.*}
             REST=${BASE#*.}
