--- a/src/UlidType/UlidType.csproj
+++ b/src/UlidType/UlidType.csproj
@@ -19,7 +19,7 @@
 
     <ItemGroup>
         <None Include="../../README.md" Pack="true" PackagePath="\"/>
-        <None Include="../../LICENSE.md" Pack="true" PackagePath="\"/>
+        <None Include="../../LICENSE" Pack="true" PackagePath="\"/>
         <None Include="../../CHANGELOG.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
