Fix package name vm2.ULID to vm2.Ulid

--- a/src/UlidType/UlidType.csproj
+++ b/src/UlidType/UlidType.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <PropertyGroup Label="NuGet">
-    <Title>vm2.ULID</Title>
+    <Title>vm2.Ulid</Title>
     <Description>
         Implementation of the Universally Unique Lexicographically Sortable Identifier (ULID) for .NET.
     </Description>
-    <PackageId>vm2.ULID</PackageId>
+    <PackageId>vm2.Ulid</PackageId>
     <PackageReleaseNotes>Initial version of the vm2.Ulid.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
     <PackageProjectUrl>https://github.com/vmelamed/vm2.Ulid/blob/main/src/UlidType/UlidType.csproj</PackageProjectUrl>
