Debug the release.yml

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -40,9 +40,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" />
-        <PackageReference Update="MinVer">
+        <PackageReference Update="MinVer" Version="6.*">
             <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
 
