--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,13 @@
 name: Release (Stable)
 
-# Optional tweak: PreRelease identifier without tagging If you decide you don’t actually need a prerelease tag each merge, you can skip creating the tag and just:
-#  * Remove tag creation step.
-#  * Add /p:MinVerDefaultPreReleaseIdentifiers=preview when packing.
-#  * Publish directly (MinVer will produce x.y.z-preview.<height> without tagging).
-
-permissions:
-  packages: write
-
 on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Why run?'
 
 env:
   DOTNET_NOLOGO: true
@@ -26,10 +22,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          filter: tree:0
+          fetch-tags: true
 
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
 
@@ -45,7 +41,6 @@ jobs:
       - name: Pack (stable)
         run: |
           mkdir -p artifacts/pack
-            # MinVer uses the exact stable tag version
           dotnet pack -c Release --no-build -o artifacts/pack /p:MinVerTagPrefix=${MINVER_TAG_PREFIX}
           ls -1 artifacts/pack
 
