--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -39,8 +39,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" />
-        <PackageReference Update="MinVer" Version="6.*">
+        <PackageReference Include="Microsoft.SourceLink.GitHub">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="MinVer">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
