--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
             exit 2
           fi
 
-          PCT=$(sed -nE 's/.([0-9]+(.[0-9]+)?)%./\1/p' "$SUMMARY" | head -n1)
+          PCT=$(sed -nE 's/Method coverage: ([0-9]+(.?[0-9]+)?)%.*/\1/p' "$SUMMARY" | head -n1)
           if [ -z "$PCT" ]; then
             echo "Could not parse coverage percent from $SUMMARY"
             exit 2
