Add JSON converters and improve ULID handling
- Added `Newtonsoft.Json` and `System.Text.Json` converters for `Ulid` to support serialization/deserialization.
- Refactored `Ulid` struct for performance, including `Timestamp` property and constructors using `Span<byte>`.
- Introduced `Ulid.MinValue` and `Ulid.MaxValue` for boundary value access.
- Enhanced `TryWrite` and `TryParse` methods for stricter validation and added a `Parse` method for `Span<byte>`.
- Updated `UlidTests` to cover new methods, boundary values, and case-insensitive parsing.
- Added `UlidNsConverterTests` and `UlidSysConverterTests` for JSON serialization/deserialization validation.
- Updated `Directory.Packages.props` to include `Newtonsoft.Json` and reorganized package versions.
- Cleaned up unused namespaces in `usings.cs`.

--- a/src/UlidType/UlidType.csproj
+++ b/src/UlidType/UlidType.csproj
@@ -29,4 +29,8 @@
         </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" />
+    </ItemGroup>
+
 </Project>
